[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Mocha Assets/Buttons/Blue.PNG" type="Texture" id=2]
[ext_resource path="res://UI/dice_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/MenuButton.gd" type="Script" id=4]
[ext_resource path="res://assets/Mocha Assets/Buttons/Bluep.PNG" type="Texture" id=5]

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

uniform bool active = false;
uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec2 uv = UV;
	
	if (active == true){
		if (add_margins) {
			vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
			
			uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
			
			if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
				COLOR.a = 0.0;
			} else {
				COLOR = texture(TEXTURE, uv);
			}
		} else {
			COLOR = texture(TEXTURE, uv);
		}
		
		if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
			COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
			COLOR.a += (1.0 - COLOR.a) * color.a;
		}
	} else {
		COLOR = previous_color
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 18 )
shader_param/active = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 161, 87 )

[sub_resource type="DynamicFont" id=19]
size = 40
outline_size = 1
extra_spacing_char = 2
font_data = ExtResource( 1 )

[node name="MenuButton" type="Area2D"]
script = ExtResource( 4 )

[node name="ButtonPressed" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 5 )

[node name="ButtonDefault" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 20 )

[node name="Label" type="Label" parent="."]
margin_left = -94.598
margin_top = -29.0
margin_right = 98.402
margin_bottom = 4.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 19 )
text = "Play"
align = 1
uppercase = true

[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MenuButton_mouse_exited"]
